feat(PlayerScoreCrawlerService): 선수들 리스트 수정 가능하게 변환